fixed spacing

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -149,3 +149,7 @@
   text-align: center;
   vertical-align: middle;
 }
+
+.section {
+  padding: 1.5rem 0.75rem;
+}
